--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,9 @@ Jinja2==3.1.2
 Mako==1.2.1
 MarkupSafe==2.0.1
 marshmallow==3.17.0
+marshmallow-dataclass==8.5.8
 multidict==6.0.2
+mypy-extensions==0.4.3
 packaging==21.3
 pluggy==1.0.0
 py==1.11.0
@@ -37,5 +39,7 @@ PyYAML==6.0
 six==1.16.0
 SQLAlchemy==1.4.40
 tomli==2.0.1
+typing-extensions==4.3.0
+typing-inspect==0.8.0
 webargs==5.5.3
 yarl==1.8.1
