--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ apispec==3.3.2
 async-timeout==4.0.2
 asyncpg==0.26.0
 attrs==22.1.0
+black==22.8.0
 cffi==1.15.1
 charset-normalizer==2.1.0
+click==8.1.3
 coverage==6.4.4
 cryptography==37.0.4
 freezegun==1.2.2
@@ -25,6 +27,8 @@ marshmallow-dataclass==8.5.8
 multidict==6.0.2
 mypy-extensions==0.4.3
 packaging==21.3
+pathspec==0.10.1
+platformdirs==2.5.2
 pluggy==1.0.0
 py==1.11.0
 pycparser==2.21
