--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,13 @@ alembic==1.8.1
 apispec==3.3.2
 async-timeout==4.0.2
 asyncpg==0.26.0
+atomicwrites==1.4.1
 attrs==22.1.0
 black==22.8.0
 cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
+colorama==0.4.5
 coverage==6.4.4
 cryptography==37.0.4
 freezegun==1.2.2
@@ -43,7 +45,7 @@ PyYAML==6.0
 six==1.16.0
 SQLAlchemy==1.4.40
 tomli==2.0.1
-typing-extensions==4.3.0
 typing-inspect==0.8.0
+typing_extensions==4.3.0
 webargs==5.5.3
 yarl==1.8.1
